# VideoRecorderApp

./: .~lock.VideoRecorderApp Doc.odt#  CMakeLists.txt  README.md  VideoRecorderApp Doc.odt  VideoWindow.cpp  VideoWindow.h  config.json  main.cpp
Manager/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  StreamManager.cpp  StreamManager.h  VideoSourceConfig.h  WatchdogManager.cpp  WatchdogManager.h
VideoReceiver/: CMakeLists.txt  VideoReceiver.cpp  VideoReceiver.h
